# p2p_file_transfer

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: build_proto.cmake
messages/: FileChunk.proto  FileTransferComplete.proto  FileTransferProposalReq.proto  FileTransferProposalResp.proto  Result.proto
messages/definitions/: FileTransferComplete.proto  FileTransferProposalResp.proto
scripts/: build_release.sh  clang-format.sh  clang-tidy.sh
src/: CMakeLists.txt  main.cpp
src/lib.certs/: CMakeLists.txt  certificate_manager.cpp  certificate_manager.hpp
src/lib.cli/: CMakeLists.txt  parser.cpp  parser.hpp
src/lib.comms/: CMakeLists.txt  Session.hpp  i_receiver.hpp  i_sender.hpp
src/lib.comms/connection_manager/: CMakeLists.txt  connection_manager.cpp  connection_manager.hpp  session.cpp  session.hpp
src/lib.comms/message_receiver/: CMakeLists.txt  message_receiver.cpp  message_receiver.hpp
src/lib.comms/message_sender/: CMakeLists.txt  message_sender.cpp  message_sender.hpp
src/lib.filesystem/: CMakeLists.txt  file_writer.cpp  file_writer.hpp
src/lib.ui/: CMakeLists.txt  console_user_interface.cpp  console_user_interface.hpp  i_userinterface.hpp
src/lib.ui/progress_bar/: progress_bar.cpp  progress_bar.hpp
src/lib.utils/: CMakeLists.txt  format.cpp  format.hpp
src/p2pft/: application.hpp
src/p2pft/connection/: connection.cpp  connection.hpp
src/p2pft/progress_bar/: progress_bar.cpp  progress_bar.hpp
src/p2pft/receiver/: receiver.cpp  receiver.hpp  session.cpp  session.hpp
src/p2pft/sender/: sender.cpp  sender.hpp
src/p2pft/startup/: app_runner.hpp  startup.cpp  startup.hpp
toolchains/: x86_64-linux-clang.cmake  x86_64-linux-gcc.cmake  x86_64-windows-msvc.cmake
